--- a/index.html
+++ b/index.html
@@ -53,8 +53,62 @@
                 <span>Css</span>
             </a>
         </div>
+        <div class="draggableIcon icon">
+            <a href="effect.html" target="_blank">
+                <img src="assets/img/icon-css.png" alt="Effect">
+                <span>Effect</span>
+            </a>
+        </div>
+        <div class="draggableIcon icon">
+            <a href="blog.html" target="_blank">
+                <img src="assets/img/icon-css.png" alt="Blog">
+                <a href="https://webweaver420.github.io/"></a>
+                <span>Blog</span>
+            </a>
+        </div>
+
     </div>
     <!-- //main__icons -->
+
+    <div class="member">
+        <ul>
+            <li class="mem1"><a href="https://seodaewon1.github.io/class2024/" target="_blank"><img
+                        src="https://seodaewon1.github.io/class2024/assets/img/face.png" alt="서대원">서대원</a></li>
+            <li class="mem1"><a href="https://hwanginji.github.io/class2024/" target="_blank"><img
+                        src="https://hwanginji.github.io/class2024/assets/img/face.png" alt="황인지">황인지</a></li>
+            <li class="mem1"><a href="https://123dd654.github.io/class2024/" target="_blank"><img
+                        src="https://123dd654.github.io/class2024/assets/img/face.png" alt="강서연">강서연</a></li>
+            <li class="mem1"><a href="https://gnlgk.github.io/class2024/" target="_blank"><img
+                        src="https://gnlgk.github.io/class2024/assets/img/face.png" alt="박진아">박진아</a></li>
+            <li class="mem1"><a href="https://nicejmp1.github.io/class2024/" target="_blank"><img
+                        src="https://nicejmp1.github.io/class2024/assets/img/face.png" alt=" 박정민">박정민</a></li>
+            <li class="mem1"><a href="https://kingsong97.github.io/class2024/" target="_blank"><img
+                        src="https://kingsong97.github.io/class2024/Assets/img/FACE.png" alt="송성민">송성민</a></li>
+            <li class="mem1"><a href="https://hyunminkim93.github.io/class2024/" target="_blank"><img
+                        src="https://hyunminkim93.github.io/class2024/assets/img/face.png" alt="김현민">김현민</a></li>
+            <li class="mem1"><a href="https://sunhew.github.io/class2024/" target="_blank"><img
+                        src="https://sunhew.github.io/class2024/assets/img/face.png" alt="최선화">최선화</a></li>
+            <li class="mem1"><a href="https://kimjw04.github.io/class2024/" target="_blank"><img
+                        src="https://kimjw04.github.io/class2024/asssets/img/face.png" alt="김진우">김진우</a></li>
+            <li class="mem1"><a href="https://hyeji1364.github.io/class2024/" target="_blank"><img
+                        src="https://hyeji1364.github.io/class2024/assets/img/face.png" alt="김혜지">김혜지</a></li>
+            <li class="mem1"><a href="https://spearboy.github.io/class2024/" target="_blank"><img
+                        src="https://spearboy.github.io/class2024/asset/img/face.jpeg" alt="조병현">조병현</a></li>
+            <li class="mem1"><a href="https://jaehyuk-lee-0712.github.io/class2024/" target="_blank"><img
+                        src="https://jaehyuk-lee-0712.github.io/class2024/assets/img/face.png" alt="이재혁">이재혁</a></li>
+            <li class="mem1"><a href="https://skadbstj12.github.io/class2024/" target="_blank"><img
+                        src="https://skadbstj12.github.io/class2024/assets/img/face.png" alt="남윤서">남윤서</a></li>
+            <li class="mem1"><a href="https://kimyih.github.io/class2024/" target="_blank"><img
+                        src="https://kimyih.github.io/class2024/assets/img/FACE.png" alt="김이현">김이현</a></li>
+            <li class="mem1"><a href="https://parksohyunnn.github.io/class2024/" target="_blank"><img
+                        src="https://parksohyunnn.github.io/class2024/assets/img/face.png" alt="박소현">박소현</a></li>
+            <li class="mem1"><a href="https://rkdrudals0611.github.io/class-2024/" target="_blank"><img
+                        src="https://rkdrudals0611.github.io/class-2024/assets/img/face.png" alt="강경민">강경민</a></li>
+            <li class="mem1"><a href="https://an83690880.github.io/class2024/" target="_blank"><img
+                        src="https://an83690880.github.io/class2024/assets/img/face.png" alt="안지은">안지은</a></li>
+        </ul>
+    </div>
+    <!-- //member -->
 
     <div class="layer__wrap" id="infoLayer" style="display: none;">
         <div class="layer__inner">
