--- a/mysql/mysql01.html
+++ b/mysql/mysql01.html
@@ -19,8 +19,8 @@
             <ul>
                 <li class="active"><a href="mysql01.html">MySQL</a></li>
                 <li><a href="mysql02.html">SQL 개념</a></li>
-                <li><a href="mysql03.html">데이터 베이스</a></li>
-                <li><a href="mysql04.html">테이블</a></li>
+                <li><a href="mysql03.html">DATABASE</a></li>
+                <li><a href="mysql04.html">TABLE</a></li>
                 <li><a href="mysql05.html">SELECT</a></li>
                 <li><a href="mysql06.html">ALTER</a></li>
             </ul>
@@ -30,8 +30,9 @@
 
     <main id="main">
         <div class="main__sample container">
+
             <div id="sample01" class="sample">
-                <h3>MySQL</h3>
+                <h3>MySQL 정의</h3>
                 <p class="strong">MySQL은 오픈 소스의 관계형 데이터베이스 관리 시스템(RDBMS)입니다.</p>
 
                 <P> MySQL은 다중 사용자 및 다중 스레드를 지원하는 관계형 데이터베이스 관리 시스템(RDBMS)으로, 데이터의 안정성과 보안성을 제공합니다. 대부분의 운영체제에서 작동하며, 웹
@@ -74,6 +75,7 @@ affiliates. Other names may be trademarks of their respective
 owners.
 
 Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.</code></pre>
+
                 <div class="info">
                     <p>맥 : cd /Applications/MAMP/Library/bin</p>
                     <p>로그인 : ./mysql -uroot -proot</p>
@@ -95,7 +97,7 @@ Type 'help;' or '\h' for help. Type '\c' to clear the current input statement.</
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:an83690880@gmail.com">an83690880@gmail.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!-- //footer -->
 
