--- a/mysql/mysql03.html
+++ b/mysql/mysql03.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="mysql01.html">MySQL</a></li>
                 <li><a href="mysql02.html">SQL 개념</a></li>
-                <li class="active"><a href="mysql03.html">데이터베이스</a></li>
-                <li><a href="mysql04.html">테이블</a></li>
+                <li class="active"><a href="mysql03.html">DATABASE</a></li>
+                <li><a href="mysql04.html">TABLE</a></li>
                 <li><a href="mysql05.html">SELECT</a></li>
                 <li><a href="mysql06.html">ALTER</a></li>
             </ul>
@@ -32,10 +32,9 @@
         <div class="main__sample container">
             <div id="sample01" class="sample">
                 <h3>데이터베이스 보기</h3>
-                <div class="info">
-                    SHOW DATABASES;
+                <div class="info">SHOW DATABASES;
                 </div>
-                <pre><code class="language-js">mysql> SHOW DATABASES;
+                <pre><code class="language-js">mysql>SHOW DATABASES;
 +--------------------+
 | Database           |
 +--------------------+
@@ -49,8 +48,7 @@
 
             <div id="sample02" class="sample">
                 <h3>데이터베이스 만들기</h3>
-                <div class="info">
-                    CREATE DATABASE 이름;
+                <div class="info">CREATE DATABASE 이름;
                 </div>
                 <pre><code class="language-js">mysql>CREATE DATABASES test;
 Query OK, 1 row affected (0.00 sec)
@@ -70,10 +68,9 @@ mysql> show databases;
 
             <div id="sample03" class="sample">
                 <h3>데이터베이스 삭제</h3>
-                <div class="info">
-                    DROP DATABASE 이름;
+                <div class="info">DROP DATABASE 이름;
                 </div>
-                <pre><code class="language-js">mysql> DROP DATABASE test;
+                <pre><code class="language-js">mysql>DROP DATABASE test;
 Query OK, 1 row affected (0.01 sec)
 
 mysql> show databases;
@@ -90,10 +87,9 @@ mysql> show databases;
 
             <div id="sample04" class="sample">
                 <h3>데이터베이스 사용하기</h3>
-                <div class="info">
-                    USE 이름
+                <div class="info">USE 이름
                 </div>
-                <pre><code class="language-js">mysql> USE test;
+                <pre><code class="language-js">mysql>USE test;
 Database changed</code></pre>
             </div>
         </div>
@@ -101,7 +97,7 @@ Database changed</code></pre>
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:an83690880@gmail.com">an83690880@gmail.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!-- //footer -->
 
