--- a/quiz/quiz01.html
+++ b/quiz/quiz01.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>퀴즈 01</title>
+    <title>Quiz01</title>
     <link rel="stylesheet" href="assets/css/quiz.css">
 </head>
 
@@ -53,7 +53,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoyboy@naver.com">webstoyboy@naver.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!-- //footer -->
 
