--- a/quiz/quiz02.html
+++ b/quiz/quiz02.html
@@ -133,7 +133,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoyboy@naver.com">webstoyboy@naver.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!-- //footer -->
 
@@ -141,7 +141,7 @@
         // 문제 정보
         const quizInfo = [
             {
-                infoDate: "2021년 1회",
+                infoDate: "2011년 1회",
                 infoType: "정보처리기능사",
                 infoNum: "01",
                 infoQuestion: "두 개의 파일의 차이가 있을 때 차이점이 나타난 바이트 위치와 행 번호를 표시하는 UNIX 명령어는?",
@@ -179,7 +179,7 @@
                 infoQuestion: "실행중인 프로그램이나 시스템을 중지시킬 수 있는 수행중단기능(break on)을 설정할 수 있는 도스 파일은?",
                 infoAnswer: "config.sys",
                 infoDesc: "io.sys : 입출력 관련 기능을 담당하는 핵심파일(커널)<br>command.com : 명령어 해석기<br>config.sys : 장치 및 기타 설정 파일<br>autoexec.bat : 부팅후 자동실행 파일"
-            }
+            },
         ]
 
         // 선택자
