--- a/quiz/quiz03.html
+++ b/quiz/quiz03.html
@@ -62,7 +62,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoyboy@naver.com">webstoyboy@naver.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!-- //footer -->
 
