--- a/quiz/quiz06.html
+++ b/quiz/quiz06.html
@@ -33,7 +33,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:webstoyboy@naver.com">webstoyboy@naver.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!-- //footer -->
 
@@ -46,7 +46,7 @@
         let quizInfo = [];
 
         // 문제 가져오기
-        const fetchQuiz = () => {
+        const fetchQuiz = () => {   // fetchQuiz 함수는 외부 JSON 파일에서 퀴즈 데이터를 가져와서 처리
             fetch("https://webs9919.github.io/class2024/json/gineungsaJC2005_02.json")
                 .then(res => res.json())
                 .then(items => {
