--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -630,13 +630,285 @@
                 </div>
             </div>
             <!-- //sample19 -->
+
+            <div id="sample20" class="sample">
+                <h3>20. 함수: 즉시실행 함수</h3>
+                <p>
+                    즉시 실행 함수(Immediately Invoked Function Expression, IIFE)는 JavaScript에서 함수를 선언하고 즉시 실행하는 패턴입니다. 이 패턴은
+                    전역 스코프를 오염시키지 않고 변수의 충돌을 방지하며, 모듈 패턴이나 비동기 코드에서 주로 사용됩니다.
+                </p>
+                <pre><code>{
+    (function () {
+        console.log("15. 실행되었습니다.")
+    })();
+
+    (() => {
+        console.log("16. 실행되었습니다.");
+    })();     
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            15. 실행되었습니다.<br>
+                            16. 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample20 -->
+
+            <div id="sample21" class="sample">
+                <h3>21. 함수: 파라미터 함수</h3>
+                <p>
+                    파라미터 함수 라는 표현은 일반적으로 함수를 호출할 때 다른 함수를 인수로 전달하는 것을 의미합니다. 이를 통해 함수 간의 상호작용이 가능하며, 코드의 재사용성과 유연성을
+                    높일 수 있습니다.
+                </p>
+                <pre><code>{
+    function func(str = "17. 실행되었습니다.") {
+        console.log(str)
+    }
+    func();
+
+    const func1 = (str = "18. 실행되었습니다.") => {
+        console.log(str)
+    }
+    func1();
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            17. 실행되었습니다.<br>
+                            18. 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample21 -->
+
+            <div id="sample22" class="sample">
+                <h3>22. 함수: 재귀 함수</h3>
+                <p>
+                    재귀 함수(Recursive function)는 함수가 자기 자신을 호출하는 것을 말합니다. 이러한 호출은 일반적으로 함수 내에서 특정 조건을 만족할 때까지 반복됩니다. 재귀
+                    함수는 특정 작업을 반복하는 데 사용되며, 반복적인 알고리즘이나 문제 해결 방법에서 특히 유용합니다.
+                </p>
+                <pre><code>{
+    // 01. 반복문을 사용하는 경우            
+    function func(num) {
+        for (let i = 0; i < num; i++) {
+            console.log("19. 실행되었습니다.");
+        }
+    }
+    func(10);
+
+    // 02. 재귀함수 사용하기 (재귀함수 콜백함수 차이점 알기)
+    function func1(num) {
+        if (num < 1) return;
+
+        console.log("20. 실행되었습니다")
+        func1(num - 1); //재귀 호출
+    }
+    func1(10);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            19. 실행되었습니다.*10<br>
+                            20. 실행되었습니다.*10
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample22 -->
+
+            <div id="sample23" class="sample">
+                <h3>23. 함수: 콜백 함수</h3>
+                <p>
+                    콜백 함수(callback function)는 다른 함수에 인수로 전달되어 특정 이벤트가 발생하거나 작업이 완료되었을 때 호출되는 함수입니다. 콜백 함수는 비동기적인 프로그래밍에서
+                    주로 사용되며, 이벤트 처리, 데이터베이스 쿼리, 타이머 함수와 같은 작업에서 자주 활용됩니다.
+                </p>
+                <pre><code>{
+    // 01. 이벤트
+    function func() {
+        console.log("21. 실행되었습니다");
+    }
+    addEventListener("click", func);     
+
+    // 02. 함수를 다른 함수의 인자로 전달
+    function func1() {
+        console.log("22. 실행되었습니다")
+    }
+    function func2(callback) {
+        callback();
+    }
+    func2(func1);
+
+    // 03. 반복문을 사용하는 경우
+    function func3(num) {
+        console.log(num + ". 실행되었습니다.")
+    }
+    function func4(callback) {
+        for (let i = 23; i < 28; i++) {
+            callback(i)
+        }
+    }
+    func4(func3);
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            22. 실행되었습니다.<br>
+                            23. 실행되었습니다.
+                            24. 실행되었습니다.
+                            25. 실행되었습니다.
+                            26. 실행되었습니다.
+                            27. 실행되었습니다.
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample23 -->
+
+            <div id="sample24" class="sample">
+                <h3>24. 함수: 비동기 방식: 콜백 함수</h3>
+                <p>
+                    비동기 방식에서 콜백 함수는 주로 비동기 작업이 완료되었을 때 실행되는 함수로 사용됩니다. 비동기 작업은 일반적으로 네트워크 요청, 파일 읽기/쓰기, 데이터베이스 쿼리 등이
+                    포함됩니다. 이러한 작업은 일반적으로 시간이 오래 걸리므로, 이러한 작업이 완료될 때까지 기다리는 대신 콜백 함수를 사용하여 작업이 완료되었을 때 특정 동작을 수행할 수 있습니다.
+                </p>
+                <pre><code>{
+    // 01. 동기적인 함수 호출
+    function func1() {
+        console.log("29. 실행되었습니다.");
+    }
+    function func2() {
+        console.log("30. 실행되었습니다.");
+    }   
+    func1();          // 두 개의 함수 func1과 func2를 정의하고, 각각을 호출한 후에 그 결과를 출력
+    func2();
+
+    // 02. 비동기적인 함수 호출
+    function func3() {
+        setTimeout(() => {
+            console.log("31. 실행되었습니다.")     // 두 개의 함수 func3와 func4를 정의 후 func3 함수를 호출한 후에 func4 함수를 호출하여 결과를 출력
+        }, 1000)                                 // func3 함수를 호출하면, 1초 후에 콘솔에 "31. 실행되었습니다."가 출력되고 이는 setTimeout 함수에 의해 1초의 딜레이 후에 실행되는 함수임            
+    }
+    function func4() {
+        console.log("32. 실행되었습니다.");       // func4 함수를 호출하면, 해당 함수는 즉시 실행되어 "32. 실행되었습니다."를 콘솔에 출력합니다.
+    }   
+    func3();
+    func4();
+
+    // 03. 콜백함수 + 비동기함수 호출
+    {
+        function func5(callback) {
+            setTimeout(() => {
+                console.log("33. 실행되었습니다.");  // func5 함수를 정의하고, 이 함수 내에서 1초 후에 "33. 실행되었습니다."를 출력한 후에 콜백 함수를 호출합니다.
+                callback();
+            }, 1000);
+        }
+        function func6() {
+            console.log("34. 실행되었습니다.");  // func6 함수를 정의하고, 이 함수 내에서 "34. 실행되었습니다."를 출력합니다.
+        }
+        func5(function () {
+            func6();                        // func5 함수를 호출할 때 콜백 함수를 인수로 전달합니다. 이 콜백 함수는 func6 함수를 호출합니다.
+        });
+    } 
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            29. 실행되었습니다.<br>
+                            30. 실행되었습니다.<br>
+                            32. 실행되었습니다.<br>
+                            31. 실행되었습니다.<br>
+                            33. 실행되었습니다.<br>
+                            34. 실행되었습니다.<br>
+
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample24 -->
+
+            <div id="sample26" class="sample">
+                <h3>26. 함수: 비동기 방식: asyne / await</h3>
+                <p>
+                    비동기 방식에서 콜백 함수는 주로 비동기 작업이 완료되었을 때 실행되는 함수로 사용됩니다. 비동기 작업은 일반적으로 네트워크 요청, 파일 읽기/쓰기, 데이터베이스 쿼리 등이
+                    포함됩니다. 이러한 작업은 일반적으로 시간이 오래 걸리므로, 이러한 작업이 완료될 때까지 기다리는 대신 콜백 함수를 사용하여 작업이 완료되었을 때 특정 동작을 수행할 수 있습니다.
+                </p>
+                <pre><code>{
+    // 01. 일반적인 함수 (동기방식)
+    function func() {
+        console.log("35. 실행되었습니다.")
+    }
+    func();
+
+    // 02. 함수 (비동기방식)
+    async function func2() {
+        console.log("36. 실행되었습니다.")      //비동기 함수인 func2는 동작이 완료될 때까지 기다리지 않고 즉시 실행됩니다. 즉, 함수 호출 후에 코드의 실행이 계속됩니다.
+    }
+    func2();
+
+    // 03. 비동기 방식(fetch())   리액트에서 제일 많이 사용함
+    async function func3() {
+        const result = await fetch("https://webstoryboy.github.io/webstoryboy/w_json/gineungsaShort.json")
+        const data = await result.json();
+        console.log(data);
+    }
+    func3();
+    <p>이 코드는 비동기 함수인 func3를 정의하고 호출합니다. 이 함수는 fetch API를 사용하여 주어진 URL에서 데이터를 가져오고, 그 결과를 콘솔에 출력합니다.
+
+        1. fetch 함수를 사용하여 주어진 URL에서 데이터를 가져옵니다. 이는 비동기 작업으로, 완료될 때까지 기다리지 않고 다음 코드로 진행됩니다.
+        2. await result.json()을 사용하여 fetch된 데이터를 JSON 형식으로 변환합니다. 이 또한 비동기 작업으로, 완료될 때까지 기다리지 않고 다음 코드로 진행됩니다.
+        3. 변환된 JSON 데이터를 data 변수에 저장합니다.
+        4. 마지막으로, console.log(data)를 사용하여 데이터를 콘솔에 출력합니다.
+        따라서 실행 결과는 fetch를 통해 해당 URL에서 가져온 데이터를 콘솔에 출력하는 것입니다. 가져온 데이터가 무엇이냐에 따라 출력되는 내용이 달라집니다.<br> 
+        해당 URL에서 JSON 형식의 데이터를 가져오는 경우, 그 데이터가 출력됩니다. 만약 데이터가 성공적으로 가져와지지 않았다면, 콘솔에 에러가 출력될 수 있습니다.</p>
+
+    // 04. 비동기 + 에러
+    async function func4() {
+        try {
+            const result = await fetch("https://webstoryboy.github.io/webstoryboy/w_json/gineungsaShort.json")
+            const data = await result.json();
+            console.log(data);
+        } catch (error) {
+            console.error(error);
+        }
+    }
+    func4();
+    <p>이 코드는 비동기 함수인 func4를 정의하고 호출합니다. 이 함수는 fetch API를 사용하여 주어진 URL에서 데이터를 가져오고, 그 결과를 콘솔에 출력합니다.<br> 
+        또한 오류가 발생한 경우에는 에러를 콘솔에 출력합니다.
+
+        1. fetch 함수를 사용하여 주어진 URL에서 데이터를 가져옵니다. 이는 비동기 작업으로, 완료될 때까지 기다리지 않고 다음 코드로 진행됩니다.
+        2. await result.json()을 사용하여 fetch된 데이터를 JSON 형식으로 변환합니다. 이 또한 비동기 작업으로, 완료될 때까지 기다리지 않고 다음 코드로 진행됩니다.
+        3. 변환된 JSON 데이터를 data 변수에 저장합니다.
+        4. 마지막으로, console.log(data)를 사용하여 데이터를 콘솔에 출력합니다.
+        만약 데이터를 가져오는 과정에서 오류가 발생하면, try-catch 문을 사용하여 오류를 처리합니다. 
+        오류가 발생하면 catch 블록이 실행되어 console.error(error)를 통해 에러를 콘솔에 출력합니다.
+        따라서 실행 결과는 fetch를 통해 해당 URL에서 가져온 데이터를 콘솔에 출력하는 것입니다. 가져온 데이터가 무엇이냐에 따라 출력되는 내용이 달라집니다. 가져오는 과정에서 오류가 발생하면, 해당 오류가 콘솔에 출력됩니다.</p>
+}</code></pre>
+                <div class="result">
+                    <details>
+                        <summary>결과 확인하기</summary>
+                        <div>
+                            35. 실행되었습니다.<br>
+                            36. 실행되었습니다.<br>
+
+                        </div>
+                    </details>
+                </div>
+            </div>
+            <!-- //sample23 -->
         </div>
         <!-- //main__sample -->
     </main>
     <!-- //main -->
 
     <footer id="footer">
-
     </footer>
     <!-- //footer -->
 
@@ -644,218 +916,35 @@
     <script>hljs.highlightAll();</script>
     <script>
 
-        // 01.함수 : 선언적 함수
-        {
-            function test() {
-                console.log("01.함수 : 선언적 함수")
-            }
-            test();
-        }
-        // 02.함수 : 익명 함수
-        {
-            const test = function () {
-                console.log("02.함수 : 익명 함수")
-            }
-            test();
-        }
-        // 03.함수 : 매개변수 함수
-        {
-            function test(str) {
-                console.log(str)
-            }
-            test("03.함수 : 매개변수 함수")
-            const test1 = function (str) {
-                console.log(str)
-            }
-            test1("03.함수 : 매개변수 함수");
-        }
-        // 04.함수 : 리턴값 함수
-        {
-            function test() {
-                return "04.함수 : 리턴값 함수"
-            }
-            console.log(test());
-            const test1 = function () {
-                return "04.함수 : 리턴값 함수"
-            }
-            console.log(test1());
-        }
-        // 05.함수 : 매개변수 + 리턴값 함수
-        {
-            function test(str) {
-                return str;
-            }
-            console.log(test("05.함수 : 매개변수 + 리턴값 함수"))
-            const test1 = function (str) {
-                return str;
-            }
-            console.log(test1("05.함수 : 매개변수 + 리턴값 함수"))
-        }
-        // 06. 화살표함수 : 선언적 함수
-        {
-            test = () => {
-                console.log("06. 화살표함수 : 선언적 함수")
-            }
-            test();
-        }
-        // 07.화살표함수 : 익명 함수
-        {
-            const test = () => {
-                console.log("07.화살표함수 : 익명 함수")
-            }
-            test();
-        }
-        // 08.화살표함수 : 매개변수 함수
-        {
-            test = (str) => {
-                console.log(str)
-            }
-            test("08.화살표함수 : 매개변수 함수")
-        }
-        // 09.화살표함수 : 리턴값 함수
-        {
-            test = () => {
-                return "09.화살표함수 : 리턴값 함수"
-            }
-            console.log(test());
-        }
-        // 10.화살표함수 : 매개변수 + 리턴값 함수
-        {
-            test = (str) => {
-                return str;
-            }
-            console.log(test("10.화살표함수 : 매개변수 + 리턴값 함수"))
-        }
-        // 11. 함수 유형: 함수와 매개변수를 이용한 형태
-        {
-            function func(num, str) {
-                console.log(num + ". " + str);
-                console.log(`${num}. ${str}`);
-            }
-            func(11, "함수가 실행되었습니다.");
-        }
-        // 12. 함수 유형: 함수와 변수를 이용한 형태
-        {
-            const num = 12;
-            const str = "함수가 실행되었습니다.";
-            function func(num, str) {
-                console.log(`${num}. ${str}`);
-            }
-            func(num, str);
-        }
-        // 13. 함수 유형: 함수와 배열을 이용한 형태
-        {
-            const num = [13, 14];
-            const str = ["함수가 실행되었습니다.", "함수가 실행되었습니다."];
-            function func(num, str) {
-                console.log(`${num}. ${str}`);
-            }
-            func(num[0], str[0]);
-            func(num[1], str[1]);
-        }
-        // 14. 함수 유형: 함수와 객체를 이용한 형태
-        {
-            const info = {
-                num: 15,
-                str: "함수가 실행되었습니다."
-            }
-            function func(num, str) {
-                console.log(`${num}. ${str}`);
-            }
-            func(info.num, info.str);
-        }
-        // 15. 함수 유형: 함수와 객체 및 배열을 이용한 형태
-        {
-            const info = [
-                { num: 16, str: "함수가 실행되었습니다" },
-                { num: 17, str: "함수가 실행되었습니다" }
-            ]
-            function func(num, str) {
-                console.log(`${num}. ${str}`);
-            }
-            func(info[0].num, info[0].str);
-            func(info[1].num, info[1].str);
-        }
-        // 16. 함수 유형: 객체 안에 함수를 이용한 형태
-        {
-            const info = {
-                num: 18,
-                str: "함수가 실행되었습니다.",
-                result: () => {
-                    console.log(`${info.num}.${info.str}`)
-                }
-            }
-            info.result();
-        }
-        // 17. 함수 유형: 객체 생성자 함수
-        {
-            //함수 정의(this는 여기서 자기자신을 가리킴)
-            function Func(num, str) {
-                this.num = num;
-                this.str = str;
-                this.result = () => {
-                    console.log(`${this.num}.${this.str}`);
-                }
-            }
-            //인스턴스 생설
-            const info1 = new Func(19, "함수가 실행되었습니다.");
-            const info2 = new Func(20, "함수가 실행되었습니다.");
-            //호출
-            info1.result();
-            info2.result();
-        }
-        // 18. 함수 유형: 프로토타입 함수
-        {
-            //함수 정의
-            function Funs(num, str) {
-                this.num = num;
-                this.str = str;
-            }
-            //메서드 추가
-            Funs.prototype.result = function () {
-                console.log(`${this.num}.${this.str}`);
-            }
-            //인스턴스 생설
-            const info1 = new Func(21, "함수가 실행되었습니다.");
-            const info2 = new Func(22, "함수가 실행되었습니다.");
-            //호출
-            info1.result();
-            info2.result();
-        }
-        // 19. 함수 유형: 객체리터럴 함수
-        {
-            //함수 정의
-            function Funs(num, str) {
-                this.num = num;
-                this.str = str;
-            }
-            //메서드 추가
-            Func.prototype = {
-                result1: function () {
-                    console.log(`${this.num}.${this.str}`);
-                },
-                result2: function () {
-                    console.log(`${this.num}.${this.str}`);
-                }
-            }
-            //인스턴스 생설
-            const info1 = new Func(23, "함수가 실행되었습니다.");
-            const info2 = new Func(24, "함수가 실행되었습니다.");
-            //호출
-            info1.result1();
-            info2.result2();
-        }
-        // 20. 함수: 즉시실행 함수
-        // 21. 함수: 파라미터 함수
-        // 22. 함수: 재귀 함수
-        // 23. 함수: 콜백 함수
-        // 24. 함수: 비동기 방식: 콜백 함수
+
+
+
+
         // 25. 함수: 비동기 방식: 프로미스
-        // 26. 함수: 비동기 방식: asyne / await
+        // {
+        //     const func = new Promise((resolve, reject) => {
+        //         if (data) {
+        //             resolve("35. 실행되었습니다");
+        //         } else {
+        //             reject("36. 실행되었습니다");
+        //         }
+        //     })
+
+        //     func
+        //         .then(
+        //             result => document.write(result)
+        //         )
+        //         .catch(
+        //             error => document.write(error)
+        //         )
+        // }
+       
         // 27. 함수: 중첩 함수
         // 28. 함수: 클로저
         // 29. 클래스: 기본
         // 30. 클래스: 상속
+
+
     </script>
 </body>
 
