--- a/mysql/mysql02.html
+++ b/mysql/mysql02.html
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="mysql01.html">MySQL</a></li>
                 <li class="active"><a href="mysql02.html">SQL 개념</a></li>
-                <li><a href="mysql03.html">데이터 베이스</a></li>
-                <li><a href="mysql04.html">테이블</a></li>
+                <li><a href="mysql03.html">DATABASE</a></li>
+                <li><a href="mysql04.html">TABLE</a></li>
                 <li><a href="mysql05.html">SELECT</a></li>
                 <li><a href="mysql06.html">ALTER</a></li>
             </ul>
@@ -30,6 +30,7 @@
 
     <main id="main">
         <div class="main__sample container">
+
             <div id="sample01" class="sample">
                 <h3>SQL(Structured Query Language)</h3>
                 <p class="strong">SQL은 Structured Query Language의 약자로, 데이터베이스의 구조를 정의하고 데이터를 조작하는 데에 사용됩니다.</p>
@@ -60,7 +61,7 @@
                 <ul>
                     <li><i>S</i>ELECT : 데이터 검색</li>
                     <li><i>I</i>NSERT : 새로운 데이터 추가</li>
-                    <li><i>U</i>PDATE : 저장된 데이터를 갱신</li>
+                    <li><i>U</i>PDATE : 저장되어 있는 데이터를 갱신</li>
                     <li><i>D</i>ELETE : 저장되어 있는 행을 삭제</li>
                 </ul>
 
@@ -77,7 +78,7 @@
     <!-- //main -->
 
     <footer id="footer">
-        <a href="mailto:an83690880@gmail.com">an83690880@gmail.com</a>
+        <a href="mailto:webweaver420@gmail.com">webweaver420@gmail.com</a>
     </footer>
     <!--//footer  -->
 
