--- a/quiz/index.html
+++ b/quiz/index.html
@@ -17,7 +17,7 @@
         }
 
         a {
-            color: #000;
+            color: #fff;
             text-decoration: none;
         }
 
@@ -59,13 +59,13 @@
         }
 
         main h1 {
-            font-size: 5vw;
+            font-size: 6vw;
             margin-bottom: 3vw;
             margin-top: 1vw;
         }
 
         main h1 a {
-            color: #070550;
+            color: #04062b;
         }
 
         main nav {
@@ -80,20 +80,20 @@
 
         main nav ul li a {
             display: inline-block;
-            font-size: 16px;
+            font-size: 20px;
             font-family: "nanumSquareNeo";
             border: 1px dashed #3282f7;
             padding: 10px 20px;
             margin: 2px;
             color: #276cc7;
-            background-color: #bcd0e0;
+            background-color: #f2f6f9;
             transition: all 0.3s;
         }
 
         main nav ul li a:hover {
-            border: 1px solid #0e73d1;
-            background-color: #5da4f5;
-            color: #3e11df;
+            border: 1px solid #d4e4f4;
+            background-color: #caddf2;
+            color: #aba0d5;
         }
 
         #particles {
@@ -112,11 +112,11 @@
             top: 0;
             width: 100%;
             height: 100%;
-            background: #bcd0e0;
+            background: #f2f6f9;
         }
 
         .circle {
-            fill: #3282f7;
+            fill: #1c4080;
         }
 
         svg {
