--- a/webd/test.html
+++ b/webd/test.html
@@ -3,53 +3,70 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 menu-2</title>
+    <title>Document</title>
     <style>
         * {
             margin: 0;
             padding: 0;
         }
 
-        a {
-            text-decoration: none;
-            color: #000;
-        }
-
-        li {
-            list-style: none;
-        }
-
         #wrap {
             width: 1200px;
-            height: 700px;
             margin: 0 auto;
-            /* 가운데정렬 */
         }
 
         #header {
             width: 100%;
             display: flex;
+
+        }
+
+        /* #header::after {
+            content: '';
+            width: 100%;
+            height: 10px;
+            background-color: #9f3a3a;
+            position: absolute;
+            left: 0;
+            top: 100px;
+            z-index: 1;
+            transition: all 0.3s;
+        }
+
+        #header.on::after {
+            height: 158px;
+        } */
+
+        a::after {
+            content: '';
+            margin-left: 0.2em;
+            opacity: 0;
+            transition: all 0.3s;
+            z-index: 1;
+        }
+
+        a:hover::after {
+            opacity: 1;
         }
 
         #header .logo {
             width: 20%;
-            height: 100px;
-            background-color: #efefef;
+            height: 150px;
+            background-color: #dfdfdf;
         }
 
-        /* nav */
         #header .nav {
             width: 80%;
-            height: 100px;
-            background-color: #e3e3e3;
+            height: 150px;
+            background-color: #dadada;
         }
 
         #header .nav>ul {
             display: flex;
             justify-content: right;
-            margin-top: 30px;
+            /* flex 컨테이너의 아이템을 컨테이너의 오른쪽에 정렬 */
+            margin-top: 50px;
             margin-left: auto;
             width: fit-content;
         }
@@ -60,62 +77,63 @@
 
         #header .nav>ul>li>a {
             padding: 10px 50px;
-            background-color: #d9d9d9;
+            background-color: #c49b9b;
+            color: #000;
             display: inline-block;
-        }
-
-        #header .nav>ul>li>a {
-            background-color: #a1a1a1;
+            /* 메뉴 부분 */
         }
 
         #header .nav>ul>li>ul {
             text-align: center;
+            /* position: relative; */
+            /* z-index: 10; */
+        }
+
+        #header .nav>ul>li>ul>li {
+            list-style: none;
         }
 
         #header .nav>ul>li>ul>li>a {
-            background-color: #e3e3e3;
             padding: 10px;
             width: 100%;
             display: inline-block;
             box-sizing: border-box;
+            color: #000;
+
         }
 
-        #header .nav>ul>li>ul>li>a:hover {
-            background-color: #888888;
-        }
-
-
-
-        #slider {
+        #main {
             width: 100%;
-            height: 300px;
+        }
+
+        #main .slider {
+            width: 100%;
+            height: 350px;
             background-color: #d9d9d9;
         }
 
-        #contents {
+        #main .contents {
             width: 100%;
             display: flex;
         }
 
-        #contents .content1 {
+        #main .contents1 {
             width: 33.3333%;
-            height: 200px;
+            height: 300px;
             background-color: #d1d1d1;
         }
 
-        #contents .content2 {
+        #main .contents2 {
             width: 33.3333%;
-            height: 200px;
-            background-color: #c7c7c7;
+            height: 300px;
+            background-color: #cbcbcb;
         }
 
-        #contents .content3 {
+        #main .contents3 {
             width: 33.3333%;
-            height: 200px;
-            background-color: #bcbcbc;
+            height: 300px;
+            background-color: #c9c9c9;
         }
-
-        /* contents */
 
         #footer {
             width: 100%;
@@ -125,35 +143,26 @@
         #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #b1b1b1;
+            background-color: #bfbfbf;
         }
 
         #footer .footer2 {
             width: 60%;
             height: 100px;
-            background-color: #a3a3a3;
+            background-color: #b1b1b1;
         }
 
         #footer .footer3 {
             width: 20%;
             height: 100px;
-            background-color: #9d9d9d;
-        }
-
-        /* 자바스크립트 CSS  */
-        .nav>ul>li>ul {
-            display: block;
-            height: 0px;
-            overflow: hidden;
-            /* height: 158px; */
-            transition: all 0.3s;
+            background-color: #bcbcbc;
         }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <div id="header">
+        <header id="header">
             <div class="logo"></div>
             <div class="nav">
                 <ul>
@@ -191,60 +200,31 @@
                     </li>
                 </ul>
             </div>
-
-        </div>
+        </header>
         <!-- //header -->
 
-        <div id="slider">
-        </div>
-        <!-- //slider -->
+        <main id="main">
+            <article class="slider"></article>
+            <!-- //slider -->
+            <section class="contents">
+                <section class="contents1"></section>
+                <section class="contents2"></section>
+                <section class="contents3"></section>
+            </section>
+            <!-- //contents -->
+        </main>
+        <!-- //main -->
 
-        <div id="contents">
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
-        </div>
-        <!-- //contents -->
-
-        <div id="footer">
+        <footer id="footer">
             <div class="footer1"></div>
             <div class="footer2"></div>
             <div class="footer3"></div>
-        </div>
+        </footer>
         <!-- //footer -->
     </div>
     <!-- //wrap -->
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-    <script>
-        // $(function () {
-        //     $(".nav > ul > li").mouseover(function () {
-        //         $(".nav > ul > li > ul").stop().slideDown();
-        //     });
-        //     $(".nav > ul > li").mouseout(function () {
-        //         $(".nav > ul > li > ul").stop().slideUp();
-        //     });
-        // });                              
-    </script>
-
-    <script>
-        window.onload = function () {
-            const navList = document.querySelector(".nav > ul")
-
-            navList.addEventListener("mouseover", function () {
-                navList.querySelectorAll(".submenu").forEach(sub => {
-                    sub.style.height = "158px";
-                })
-            })
-
-            navList.addEventListener("mouseout", function () {
-                navList.querySelectorAll(".submenu").forEach(sub => {
-                    sub.style.height = "0px";
-                })
-            })
-        }
-    </script>
 </body>
 
 </html>
