--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -71,7 +71,7 @@
             <div id="sample01" class="sample">
                 <h3>01. 함수 : 선언적 함수</h3>
                 <p>
-                    자바스크립트에서 가장 일반적으로 사용되는 함수(function) 정의 방식 중 하나입니다.<br>
+                    자바스크립트에서 가장 일반적으로 사용되는 함수(function) 정의 방식 중 하나로<br>
                     이 방식은 function 키워드를 사용하여 함수를 정의하고, 함수의 이름을 지정한 후 중괄호'{}' 내에 함수의 동작을 작성합니다.
                 </p>
                 <pre><code>{
@@ -94,8 +94,7 @@
             <div id="sample02" class="sample">
                 <h3>02. 함수 : 익명 함수</h3>
                 <p>
-                    함수를 정의할 때 함수 이름을 생략하고 바로 정의하는 것을 익명 함수라고 합니다.<br>
-                    익명 함수는 주로 변수에 할당되어 사용되거나 다른 함수의 매개변수로 전달될 때 사용됩니다.
+                    익명 함수는 주로 다른 함수의 인자로 전달하거나 즉시 실행하는 등의 용도로 사용되고, 함수를 정의할 때 함수 이름을 생략하고 괄호 ()가 나오는 것이 특징입니다.
                 </p>
                 <pre><code>{
     const func = function () {  // 'const'라는 상수 안에 'func'라는 함수 선언
@@ -148,7 +147,9 @@
             <div id="sample04" class="sample">
                 <h3>04. 함수 : 리턴값 함수</h3>
                 <p>
-                    함수의 "리턴값"은 함수가 실행된 후에 반환하는 값입니다. 함수는 입력을 받아서 처리하고 그 결과를 반환할 수 있습니다. 이러한 결과를 "리턴값"이라고 합니다.
+                    리턴을 정의하는 것은 함수가 값을 반환할 때 사용됩니다. 일반적으로 함수는 계산된 값을 반환하거나 특정 작업을 완료한 후 결과를 반환합니다.<br>
+                    이때 return 키워드를 사용하여 값을 반환하는데, 함수 호출시 return 키워드를 만나면 그 즉시 해당 함수의 실행이 종료되고 반환값이 호출한 곳으로 전달됩니다.<br>
+                    리턴값 함수는 다른 코드에서 값을 반환할 수 있도록 만들어주며, 이는 프로그램에서 유용한 작업을 수행하는 데 도움이 됩니다. 
                 </p>
                 <pre><code>{
     //선언적 함수
@@ -177,7 +178,7 @@
             <div id="sample05" class="sample">
                 <h3>05. 함수 : 매개변수 + 리턴값 함수</h3>
                 <p>
-                    매개변수와 리턴값을 가지는 함수는 함수가 호출될 때 입력값을 받아들이고, 그 값들을 이용하여 작업을 수행한 후 결과값을 반환하는 함수를 말합니다.
+                    매개변수와 리턴값을 가지는 함수는 함수가 호출될 때 매개변수를 통해 입력값을 받아들이고, 그 값들을 이용하여 작업을 수행한 후 결과값을 반환하는 함수를 말합니다.
                 </p>
                 <pre><code>{
     //선언적 함수
@@ -210,22 +211,30 @@
                     () => { ... } 형태로 작성되며, ()는 매개변수를 받을 수 있고, =>는 함수의 정의를 나타냅니다. 중괄호{} 내에 함수의 동작이 작성되어 있습니다.
                 </p>
                 <pre><code>{
-                    // 선언적 함수
-    function func() {
-        console.log("06. 함수가 실행되었습니다.");
+    // 일반 함수 표현식
+    function add(a, b) {
+        return a + b;
     }
-    func();
+        console.log(add(3, 5)); // 출력: 8
 
-    func1 = () => {   // 화살표 함수로 변경
-        console.log("06. 함수가 실행되었습니다.");
-    }
-    func1();
+    // 매개변수가 없는 화살표 함수 표현식
+    const greet = () => {
+        return "Hello!";
+    };  
+        console.log(greet()); // 출력: Hello!
+
+    // 암시적 반환 (함수 바디가 한 줄로 표현되어 있으면 중괄호와 return 키워드를 생략하고 바로 표현식을 작성하여 값을 반환가능)
+    const cube = x => x ** 3;          // `cube`라는 이름의 화살표 함수가 정의, 이 함수는 한 개의 매개변수 `x`를 받아서 그 값을 세제곱하여 반환. 이후 `console.log(cube(4));`를 통해 `cube` 함수가 호출되고, 매개변수로 4가 전달. 호출된 `cube` 함수는 매개변수로 전달된 4를 받아서 `x ** 3` 표현식을 계산. 여기서 `x`는 4이므로, 4의 세제곱은 64 
+
+        console.log(cube(4)); // 출력: 64; 
 }</code></pre>
                 <div class="result">
                     <details>
                         <summary>결과 확인하기</summary>
-                        <div>
-                            06. 함수가 실행되었습니다.
+                        <div>    
+                            8<br>
+                            Hello!<br>
+                            64
                         </div>
                     </details>
                 </div>
@@ -235,17 +244,18 @@
             <div id="sample07" class="sample">
                 <h3>07. 화살표 함수 : 익명 함수</h3>
                 <p>
-                    화살표 함수는 주로 익명 함수로 사용됩니다. 즉, 함수에 이름을 지정하지 않고 변수에 할당하여 사용하는 것이 일반적입니다. 이렇게 하면 함수를 간단하게 선언하고 다른 함수의 인수로
+                    화살표 함수는 주로 익명 함수로 사용됩니다. 즉, 함수에 이름을 지정하지 않고 변수에 할당하여 사용하는 것이 일반적입니다.<br>
+                    이렇게 하면 함수를 간단하게 선언하고 다른 함수의 인수로
                     전달할 수 있습니다.
                 </p>
                 <pre><code>{
-    // 익명 함수
+    // 익명 함수 표현식
     const func = function () {
         console.log("07. 함수가 실행되었습니다.")
     };
     func();
 
-    // 익명 함수 --> 화살표 함수
+    // 익명 함수 + 화살표 함수 표현식
     const func1 = () => {
         console.log("07. 함수가 실행되었습니다.")
     };
@@ -254,7 +264,7 @@
                 <div class="result">
                     <details>
                         <summary>결과 확인하기</summary>
-                        <div>
+                        <div>                        
                             07. 함수가 실행되었습니다.
                         </div>
                     </details>
@@ -268,13 +278,13 @@
                     화살표 함수는 매개변수를 가지고 있는 함수를 간결하게 작성할 수 있는 방법입니다. 매개변수 함수는 함수가 호출될 때 입력값을 받아들이는 함수를 의미합니다.
                 </p>
                 <pre><code>{
-    // 선언적 함수
+    // 선언적 함수 표현식
     func = (str) => {
         console.log(str);
     }
     func("08. 함수가 실행되었습니다.");
 
-    // 익명 함수
+    // 익명 함수 표현식
     const func1 = (str) => {
        console.log(str)
     }
@@ -296,17 +306,17 @@
                     화살표 함수(arrow function)에서의 리턴값은 함수가 실행된 후에 반환되는 값입니다. 기존의 함수 선언 방식과 마찬가지로, 화살표 함수에서도 결과를 반환할 수 있습니다.
                 </p>
                 <pre><code>{
-    // 선언적 함수
+    // 선언적 함수 표현식
     func = () => {
         return "09. 함수가 실행되었습니다.";
     }
-    console.log(func());
+        console.log(func());
 
-    // 익명 함수
+    // 익명 함수 표현식
     const func1 = () => {
         return "09. 함수가 실행되었습니다.";
     }
-    console.log(func1());    
+        console.log(func1());    
 }</code></pre>
                 <div class="result">
                     <details>
@@ -323,10 +333,10 @@
                 <h3>10. 화살표 함수 : 매개변수 + 리턴값</h3>
                 <p>
                     화살표 함수는 매개변수와 리턴값을 간단하게 처리하는 함수 선언 방식입니다. 매개변수는 함수가 실행될 때 입력으로 전달되는 값으로, 함수 내에서 사용될 수 있습니다.<br>
-                    리턴값은 함수가 실행된 후에 반환되는 값으로, 함수가 수행한 작업의 결과입니다. 화살표 함수에서는 화살표(=>) 오른쪽에 리턴할 값을 작성합니다.
+                    리턴값은 함수가 실행된 후에 반환되는 값으로, 함수가 수행한 작업의 결과입니다. 화살표 함수에서는 화살표 오른쪽에 리턴할 값을 작성합니다.
                 </p>
                 <pre><code>{
-    // 익명 함수(화살표 함수) + 매개변수 + 리턴값
+    // 익명 함수(화살표 함수) + 매개변수 + 리턴값 표현식
     const func = (str) => {
         return str;
     }
@@ -336,15 +346,15 @@
     const func2 = str => {
         return str;
     }
-    console.log(runc2("10.함수가 실행되었습니다."));
+        console.log(runc2("10.함수가 실행되었습니다."));
 
     // 리턴 생략
     const func3 = str => str;
-    console.log(func3("10.함수가 실행되었습니다."));
+        console.log(func3("10.함수가 실행되었습니다."));
 
     // 선언적 함수(가독성 떨어져서 사용 잘 안함)
     func4 = str => str;
-    console.log(func3("10.함수가 실행되었습니다."));
+        console.log(func3("10.함수가 실행되었습니다."));
 }</code></pre>
                 <div class="result">
                     <details>
