--- a/javascript/javascript03.html
+++ b/javascript/javascript03.html
@@ -848,22 +848,22 @@
                 <h3>26. 함수: 비동기 방식: asyne / await</h3>
                 <p>
                     비동기 방식에서 콜백 함수는 주로 비동기 작업이 완료되었을 때 실행되는 함수로 사용됩니다. 비동기 작업은 일반적으로 네트워크 요청, 파일 읽기/쓰기, 데이터베이스 쿼리 등이
-                    포함됩니다. 이러한 작업은 일반적으로 시간이 오래 걸리므로, 이러한 작업이 완료될 때까지 기다리는 대신 콜백 함수를 사용하여 작업이 완료되었을 때 특정 동작을 수행할 수 있습니다.
+                    포함됩니다. 이러한 작업은 일반적으로 시간이 오래 걸리므로, 작업이 완료될 때까지 기다리는 대신 콜백 함수를 사용하여 작업이 완료되었을 때 특정 동작을 수행할 수 있습니다.
                 </p>
                 <pre><code>{
-    // 01. 일반적인 함수 (동기방식)
+    // 일반적인 함수 표현식 (동기방식)
     function func() {
         console.log("35. 실행되었습니다.")
     }
     func();
 
-    // 02. 함수 (비동기방식)
+    // 비동기방식 함수 표현식
     async function func2() {
-        console.log("36. 실행되었습니다.")      //비동기 함수인 func2는 동작이 완료될 때까지 기다리지 않고 즉시 실행됩니다. 즉, 함수 호출 후에 코드의 실행이 계속됩니다.
+        console.log("36. 실행되었습니다.")      //비동기 함수인 func2는 동작이 완료될 때까지 기다리지 않고 즉시 실행, 즉, 함수 호출 후에 코드의 실행이 계속됩니다.
     }
     func2();
 
-    // 03. 비동기 방식(fetch())   리액트에서 제일 많이 사용함
+    // 03. 비동기 방식(fetch())  // 리액트에서 제일 많이 사용함
     async function func3() {
         const result = await fetch("https://webstoryboy.github.io/webstoryboy/w_json/gineungsaShort.json")
         const data = await result.json();
