--- a/webd/menutest.html
+++ b/webd/menutest.html
@@ -89,38 +89,6 @@
             height: 100px;
             background-color: #c7c7c7;
         }
-
-        /* nav */
-        nav {}
-
-        nav>ul {}
-
-        nav>ul>li {
-            position: relative;
-        }
-
-        nav>ul>li>a {
-            padding: 10px;
-            display: block;
-            text-align: center;
-            background-color: #ccc;
-        }
-
-        nav>ul>li>a:hover {
-            background-color: #dbdbdb;
-        }
-
-        nav>ul>li>ul {
-            position: absolute;
-            right: -20;
-            top: 0;
-            width: 200px;
-            background-color: #6d6d6d;
-        }
-
-        nav>ul>li>ul>li {}
-
-        nav>ul>li>ul>li>a {}
     </style>
 </head>
 
@@ -128,42 +96,7 @@
     <div id="wrap">
         <header id="header">
             <h1 class="logo"></h1>
-            <nav class="nav">
-                <ul>
-                    <li><a href="#">menu</a>
-                        <ul>
-                            <li><a href="#">submenu1-1</a></li>
-                            <li><a href="#">submenu1-2</a></li>
-                            <li><a href="#">submenu1-3</a></li>
-                            <li><a href="#">submenu1-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">menu</a>
-                        <ul>
-                            <li><a href="#">submenu2-1</a></li>
-                            <li><a href="#">submenu2-2</a></li>
-                            <li><a href="#">submenu2-3</a></li>
-                            <li><a href="#">submenu2-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">menu3</a>
-                        <ul>
-                            <li><a href="#">submenu3-1</a></li>
-                            <li><a href="#">submenu3-2</a></li>
-                            <li><a href="#">submenu3-3</a></li>
-                            <li><a href="#">submenu3-4</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">menu4</a>
-                        <ul>
-                            <li><a href="#">submenu4-1</a></li>
-                            <li><a href="#">submenu4-2</a></li>
-                            <li><a href="#">submenu4-3</a></li>
-                            <li><a href="#">submenu4-4</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+            <nav class="nav"></nav>
         </header>
         <!-- //header -->
 
