--- a/webd/layoutB-2.html
+++ b/webd/layoutB-2.html
@@ -5,82 +5,99 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 B-1</title>
+    <title>웹디자인기능사 레이아웃 B-2</title>
     <style>
         * {
             margin: 0;
             padding: 0;
         }
+
         #wrap {
             width: 100%;
         }
+
         #header {
             width: 100%;
             background-color: #efefef;
         }
+
         #header .header_container {
             width: 1200px;
             margin: 0 auto;
             display: flex;
         }
+
         #header .header_container .logo {
             width: 20%;
             height: 100px;
             background-color: #d9d9d9;
         }
+
         #header .header_container .nav {
             width: 80%;
             height: 100px;
             background-color: #d1d1d1;
         }
+
         #slider {
             width: 1200px;
             height: 300px;
             margin: 0 auto;
             background-color: #c7c7c7;
         }
+
         #contents {
             width: 1200px;
             margin: 0 auto;
             display: flex;
         }
+
         #contents .content1 {
             width: 33.3333%;
             height: 200px;
             background-color: #bcbcbc;
         }
+
         #contents .content2 {
             width: 33.3333%;
             height: 200px;
             background-color: #b1b1b1;
         }
+
         #contents .content3 {
             width: 33.3333%;
             height: 200px;
             background-color: #a3a3a3;
         }
+
         #footer {
-            width: 100%;            
+            width: 100%;
+            height: 100px;
             background-color: #d1d1d1;
         }
+
         #footer .footer_container {
             width: 1200px;
             margin: 0 auto;
             display: flex;
         }
+
         #footer .footer_container .footer1 {
-            width: 20%;
+            width: 80%;
             height: 100px;
             background-color: #9d9d9d;
         }
+
         #footer .footer_container .footer2 {
-            width: 80%;
+            width: 20%;
         }
+
         #footer .footer_container .footer2 .footer2-1 {
             width: 100%;
             height: 50px;
-            background-color: #838080;
+            background-color: #929292;
         }
+
         #footer .footer_container .footer2 .footer2-2 {
             width: 100%;
             height: 50px;
