--- a/webd/layoutC-4.html
+++ b/webd/layoutC-4.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 C-3</title>
+    <title>웹디자인기능사 C-4</title>
     <style>
         * {
             margin: 0;
@@ -18,74 +18,32 @@
 
         #aside {
             width: 20%;
-        }
-
-        #h1 {
-            width: 100%;
-            height: 100px;
-            background-color: #e1e1e1;
-        }
-
-        #nav {
-            width: 100%;
-            height: 550px;
-            background-color: #dbdbdb;
+            height: 650px;
+            background-color: #efefef;
         }
 
         #main {
             width: 80%;
+            height: 650px;
+            background-color: #e3e3e3;
         }
 
         #slider {
             width: 100%;
             height: 350px;
-            background-color: #c7c7c7;
+            background-color: #d9d9d9;
         }
 
         #contents {
             width: 100%;
-            display: flex;
-        }
-
-        #contents .content1 {
-            width: 33.3333%;
             height: 200px;
-            background-color: #c9c9c9;
-        }
-
-        #contents .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #cdcdcd;
-        }
-
-        #contents .content3 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #cbcbcb;
+            background-color: #d1d1d1;
         }
 
         #footer {
-            width: 100%;
-            display: flex;
-        }
-
-        #footer .footer1 {
-            width: 20%;
+            width: 200%;
             height: 100px;
-            background-color: #b9b9b9;
-        }
-
-        #footer .footer2 {
-            width: calc(100% - 40%);
-            height: 100px;
-            background-color: #b1b1b1;
-        }
-
-        #footer .footer3 {
-            width: 20%;
-            height: 100px;
-            background-color: #b1b1b1;
+            background-color: #c7c7c7;
         }
     </style>
 </head>
@@ -93,33 +51,14 @@
 <body>
     <div id="wrap">
         <aside id="aside">
-            <h1 id="h1"></h1>
-            <nav id="nav"></nav>
+
         </aside>
-        <!-- //aside -->
-
         <main id="main">
-            <article id="slider">
-            </article>
-            <!-- //slider -->
-
-            <section id="contents">
-                <section class="content1"></section>
-                <section class="content2"></section>
-                <section class="content3"></section>
-            </section>
-            <!-- //contents -->
-
-            <footer id="footer">
-                <div class="footer1"></div>
-                <div class="footer2"></div>
-                <div class="footer3"></div>
-            </footer>
-            <!-- //footer -->
+            <article id="slider"></article>
+            <section id="contents"></section>
+            <footer id="footer"></footer>
         </main>
-        <!-- //main -->
     </div>
-    <!-- //wrap -->
 </body>
 
 </html>
