--- a/webd/menu-1.html
+++ b/webd/menu-1.html
@@ -3,29 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 menu-1</title>
+    <title>M-4</title>
     <style>
         * {
             margin: 0;
             padding: 0;
         }
 
-        a {
-            text-decoration: none;
-            color: #000;
-        }
-
         li {
             list-style: none;
         }
 
+        a {
+            text-decoration: none;
+        }
+
         #wrap {
             width: 1200px;
-            height: 700px;
             margin: 0 auto;
-            /* 가운데정렬 */
         }
 
         #header {
@@ -39,210 +35,223 @@
             background-color: #efefef;
         }
 
-        /* nav */
         #header .nav {
             width: 80%;
-            height: 100px;
             background-color: #e3e3e3;
         }
 
-        #header .nav>ul {
-            display: flex;
-            justify-content: right;
-            margin-top: 30px;
-        }
-
-        #header .nav>ul>li {
-            list-style: none;
-        }
-
-        #header .nav>ul>li>a {
-            padding: 10px 50px;
-            background-color: #d9d9d9;
-            display: inline-block;
-        }
-
-        #header .nav>ul>li>a {
-            background-color: #a1a1a1;
-        }
-
-        #header .nav>ul>li>ul {
-            text-align: center;
-        }
-
-        #header .nav>ul>li>ul>li>a {
-            background-color: #e3e3e3;
-            padding: 10px;
+        #main {
             width: 100%;
-            display: inline-block;
-            box-sizing: border-box;
+            height: 500px;
+            background-color: #e3e3e3;
         }
 
-        #header .nav>ul>li>ul>li>a:hover {
-            background-color: #888888;
-        }
-
-
-
-        #slider {
+        .slider {
             width: 100%;
             height: 300px;
             background-color: #d9d9d9;
         }
 
-        #contents {
+        .contents {
             width: 100%;
             display: flex;
         }
 
-        #contents .content1 {
+        .content1 {
+            width: 33.333%;
+            height: 200px;
+            background-color: #dbdbdb;
+        }
+
+        .content2 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #dcdcdc;
+        }
+
+        .content3 {
             width: 33.3333%;
             height: 200px;
             background-color: #d1d1d1;
         }
-
-        #contents .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #c7c7c7;
-        }
-
-        #contents .content3 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #bcbcbc;
-        }
-
-        /* contents */
 
         #footer {
             width: 100%;
             display: flex;
         }
 
-        #footer .footer1 {
+        .footer1 {
             width: 20%;
             height: 100px;
+            background-color: #c1c1c1;
+        }
+
+        .footer2 {
+            width: 60%;
+            height: 100px;
+            background-color: #c9c9c9;
+        }
+
+        .footer3 {
+            width: 20%;
+            height: 100px;
+            background-color: #c7c7c7;
+        }
+
+        /* nav */
+        .nav {}
+
+        .nav>ul {
+            display: flex;
+            justify-content: right;
+            margin-top: 30px;
+        }
+
+        .nav>ul>li {
+            position: relative;
+        }
+
+        .nav>ul>li>a {
+            display: inline-block;
+            padding: 10px 50px;
             background-color: #b1b1b1;
         }
 
-        #footer .footer2 {
-            width: 60%;
-            height: 100px;
-            background-color: #a3a3a3;
+        .nav>ul>li>a {
+            background-color: #696969;
         }
 
-        #footer .footer3 {
-            width: 20%;
-            height: 100px;
-            background-color: #9d9d9d;
+        .nav>ul>li>ul {
+            position: absolute;
+            left: 0;
+            top: 38;
+            background-color: #c7c7c7;
+            width: 100%;
+            text-align: center;
+            display: none;
         }
 
-        /* 자바스크립트 CSS  */
+        .nav>ul>li>ul>li>a {
+            display: inline-block;
+            padding: 10px;
+            background-color: #c1c1c1;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .nav>ul>li>ul>li>a:hover {
+            background-color: #8f8f8f;
+        }
+
+        /* 자바스크립트용 CSS */
         .nav>ul>li>ul {
             display: block;
             height: 0px;
+            /* height: 155px; */
             overflow: hidden;
-            /* height: 158px; */
-            transition: all 0.3s;
+            transition: all 600ms;
+
+
         }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <div id="header">
-            <div class="logo"></div>
-            <div class="nav">
+        <header id="header">
+            <h1 class="logo"></h1>
+            <nav class="nav">
                 <ul>
                     <li><a href="#">메뉴1</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴1-1</a></li>
-                            <li><a href="#">서브 메뉴1-2</a></li>
-                            <li><a href="#">서브 메뉴1-3</a></li>
-                            <li><a href="#">서브 메뉴1-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴2</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴2-1</a></li>
-                            <li><a href="#">서브 메뉴2-2</a></li>
-                            <li><a href="#">서브 메뉴2-3</a></li>
-                            <li><a href="#">서브 메뉴2-4</a></li>
+                            <li><a href="#">서브메뉴2-1</a></li>
+                            <li><a href="#">서브메뉴2-2</a></li>
+                            <li><a href="#">서브메뉴2-3</a></li>
+                            <li><a href="#">서브메뉴2-4</a></li>
                         </ul>
+
                     </li>
                     <li><a href="#">메뉴3</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴3-1</a></li>
-                            <li><a href="#">서브 메뉴3-2</a></li>
-                            <li><a href="#">서브 메뉴3-3</a></li>
-                            <li><a href="#">서브 메뉴3-4</a></li>
+                            <li><a href="#">서브메뉴3-1</a></li>
+                            <li><a href="#">서브메뉴3-2</a></li>
+                            <li><a href="#">서브메뉴3-3</a></li>
+                            <li><a href="#">서브메뉴3-4</a></li>
                         </ul>
+
                     </li>
                     <li><a href="#">메뉴4</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴4-1</a></li>
-                            <li><a href="#">서브 메뉴4-2</a></li>
-                            <li><a href="#">서브 메뉴4-3</a></li>
-                            <li><a href="#">서브 메뉴4-4</a></li>
+                            <li><a href="#">서브메뉴4-1</a></li>
+                            <li><a href="#">서브메뉴4-2</a></li>
+                            <li><a href="#">서브메뉴4-3</a></li>
+                            <li><a href="#">서브메뉴4-4</a></li>
                         </ul>
-                    </li>
-                </ul>
-            </div>
 
-        </div>
+                    </li>
+
+                </ul>
+            </nav>
+        </header>
         <!-- //header -->
 
-        <div id="slider">
-        </div>
-        <!-- //slider -->
+        <main id="main">
+            <article class="slider"></article>
+            <!-- //slider -->
+            <section class="contents">
+                <div class="content1"></div>
+                <div class="content2"></div>
+                <div class="content3"></div>
+            </section>
+        </main>
+        <!-- //main -->
 
-        <div id="contents">
-            <div class="content1"></div>
-            <div class="content2"></div>
-            <div class="content3"></div>
-        </div>
-        <!-- //contents -->
-
-        <div id="footer">
+        <footer id="footer">
             <div class="footer1"></div>
             <div class="footer2"></div>
             <div class="footer3"></div>
-        </div>
+        </footer>
         <!-- //footer -->
     </div>
     <!-- //wrap -->
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
+        // 제이쿼리 버전
         // $(function () {
-        //     //선택자
-        //     $(".nav > ul > li").mouseover(function () {
-        //         $(this).find(".submenu").stop().slideDown();
+        //     메뉴에 오버했을 때 서브메뉴를 보여줘라!
+        //     $(".nav>ul>li").mouseover(function () {
+        //         $(this).find(".submenu").stop().slideDown(200)
         //     });
-
-        //     $(".nav > ul > li").mouseout(function () {
-        //         $(this).find(".submenu").stop().slideUp();
+        //     $(".nav>ul>li").mouseout(function () {
+        //         $(this).find(".submenu").stop().slideUp(200)
         //     });
-        // });                                                   
+        // });
     </script>
-
     <script>
+        // 자바스크립트 버전
         window.onload = function () {
-            const navList = document.querySelectorAll(".nav > ul > li");
+            let navList = document.querySelectorAll(".nav>ul>li")
 
             navList.forEach(function (navItem) {
                 navItem.addEventListener("mouseover", function () {
-                    this.querySelector(".submenu").style.height = "158px";
-                })
-            })
+                    this.querySelector(".submenu").style.height = "155px";
+                });
+            });
 
             navList.forEach(function (navItem) {
                 navItem.addEventListener("mouseout", function () {
                     this.querySelector(".submenu").style.height = "0px";
-                })
-            })
+                });
+            });
         }
     </script>
 </body>
