--- a/webd/menu-2.html
+++ b/webd/menu-2.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>웹디자인기능사 레이아웃 menu-2</title>
+    <title>웹디자인기능사 레이아웃 M-2</title>
     <style>
         * {
             margin: 0;
             padding: 0;
+        }
+
+        li {
+            list-style: none;
         }
 
         a {
@@ -17,15 +20,9 @@
             color: #000;
         }
 
-        li {
-            list-style: none;
-        }
-
         #wrap {
             width: 1200px;
-            height: 700px;
             margin: 0 auto;
-            /* 가운데정렬 */
         }
 
         #header {
@@ -39,52 +36,10 @@
             background-color: #efefef;
         }
 
-        /* nav */
         #header .nav {
             width: 80%;
-            height: 100px;
             background-color: #e3e3e3;
         }
-
-        #header .nav>ul {
-            display: flex;
-            justify-content: right;
-            margin-top: 30px;
-            margin-left: auto;
-            width: fit-content;
-        }
-
-        #header .nav>ul>li {
-            list-style: none;
-        }
-
-        #header .nav>ul>li>a {
-            padding: 10px 50px;
-            background-color: #d9d9d9;
-            display: inline-block;
-        }
-
-        #header .nav>ul>li>a {
-            background-color: #a1a1a1;
-        }
-
-        #header .nav>ul>li>ul {
-            text-align: center;
-        }
-
-        #header .nav>ul>li>ul>li>a {
-            background-color: #e3e3e3;
-            padding: 10px;
-            width: 100%;
-            display: inline-block;
-            box-sizing: border-box;
-        }
-
-        #header .nav>ul>li>ul>li>a:hover {
-            background-color: #888888;
-        }
-
-
 
         #slider {
             width: 100%;
@@ -115,8 +70,6 @@
             background-color: #bcbcbc;
         }
 
-        /* contents */
-
         #footer {
             width: 100%;
             display: flex;
@@ -140,13 +93,54 @@
             background-color: #9d9d9d;
         }
 
-        /* 자바스크립트 CSS  */
+        /* nav */
+        .nav>ul {
+            display: flex;
+            justify-content: right;
+            margin: 30px;
+        }
+
+        .nav>ul>li {
+            position: relative;
+        }
+
+        .nav>ul>li>a {
+            display: inline-block;
+            padding: 10px 50px;
+            background-color: #b0b0b0;
+        }
+
+        .nav>ul>li>a:hover {
+            background-color: #696969;
+        }
+
+        .nav>ul>li>ul {
+            position: absolute;
+            left: 0;
+            top: 38;
+            width: 100%;
+            text-align: center;
+            display: none;
+        }
+
+        .nav>ul>li>ul>li>a {
+            display: inline-block;
+            padding: 10px;
+            background-color: #c1c1c1;
+            width: 100%;
+            box-sizing: border-box;
+        }
+
+        .nav>ul>li>ul>li>a:hover {
+            background-color: #787878;
+        }
+
+        /* 자바스크립트용 */
         .nav>ul>li>ul {
             display: block;
-            height: 0px;
+            height: 0;
             overflow: hidden;
-            /* height: 158px; */
-            transition: all 0.3s;
+            transition: all 600ms;
         }
     </style>
 </head>
@@ -155,43 +149,42 @@
     <div id="wrap">
         <div id="header">
             <div class="logo"></div>
-            <div class="nav">
+            <nav class="nav">
                 <ul>
                     <li><a href="#">메뉴1</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴1-1</a></li>
-                            <li><a href="#">서브 메뉴1-2</a></li>
-                            <li><a href="#">서브 메뉴1-3</a></li>
-                            <li><a href="#">서브 메뉴1-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴2</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴2-1</a></li>
-                            <li><a href="#">서브 메뉴2-2</a></li>
-                            <li><a href="#">서브 메뉴2-3</a></li>
-                            <li><a href="#">서브 메뉴2-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴3</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴3-1</a></li>
-                            <li><a href="#">서브 메뉴3-2</a></li>
-                            <li><a href="#">서브 메뉴3-3</a></li>
-                            <li><a href="#">서브 메뉴3-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
                     <li><a href="#">메뉴4</a>
                         <ul class="submenu">
-                            <li><a href="#">서브 메뉴4-1</a></li>
-                            <li><a href="#">서브 메뉴4-2</a></li>
-                            <li><a href="#">서브 메뉴4-3</a></li>
-                            <li><a href="#">서브 메뉴4-4</a></li>
+                            <li><a href="#">서브메뉴1-1</a></li>
+                            <li><a href="#">서브메뉴1-2</a></li>
+                            <li><a href="#">서브메뉴1-3</a></li>
+                            <li><a href="#">서브메뉴1-4</a></li>
                         </ul>
                     </li>
                 </ul>
-            </div>
-
+            </nav>
         </div>
         <!-- //header -->
 
@@ -214,37 +207,21 @@
         <!-- //footer -->
     </div>
     <!-- //wrap -->
-
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>
-        // $(function () {
-        //     $(".nav > ul > li").mouseover(function () {
-        //         $(".nav > ul > li > ul").stop().slideDown();
-        //     });
-        //     $(".nav > ul > li").mouseout(function () {
-        //         $(".nav > ul > li > ul").stop().slideUp();
-        //     });
-        // });                              
+        $(function () {
+            $(".nav>ul>li").mouseover(function () {
+                console.log("dd")
+                $(".nav>ul>li>ul").stop().slideDown();
+                $(this).find("/submenu").stop().slideDown
+            });
+            $(".nav>ul>li").mouseout(function () {
+                $(".nav>ul>li>ul").stop().slideUp();
+            });
+        }); -->
     </script>
 
-    <script>
-        window.onload = function () {
-            const navList = document.querySelector(".nav > ul")
-
-            navList.addEventListener("mouseover", function () {
-                navList.querySelectorAll(".submenu").forEach(sub => {
-                    sub.style.height = "158px";
-                })
-            })
-
-            navList.addEventListener("mouseout", function () {
-                navList.querySelectorAll(".submenu").forEach(sub => {
-                    sub.style.height = "0px";
-                })
-            })
-        }
-    </script>
 </body>
+
 
 </html>
