--- a/webd/testa유형.html
+++ b/webd/testa유형.html
@@ -3,25 +3,24 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M-4</title>
+    <title>웹디자인기능사 레이아웃 A-1</title>
     <link href="https://webfontworld.github.io/gmarket/GmarketSans.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
-            /* CSS 디버깅설정 */
-            outline: 1px solid #000 !important;
+        }
+
+        a {
+            font-family: 'GmarketSans';
+            color: #000;
+            text-decoration: none;
         }
 
         li {
             list-style: none;
-        }
-
-        a {
-            text-decoration: none;
-            color: #000;
-            font-family: 'GmarketSans';
         }
 
         #wrap {
@@ -42,42 +41,37 @@
 
         #header .nav {
             width: 80%;
+            height: 100px;
             background-color: #e3e3e3;
         }
 
-        #main {
-            width: 100%;
-            height: 500px;
-            background-color: #e3e3e3;
-        }
-
-        .slider {
+        #slider {
             width: 100%;
             height: 300px;
             background-color: #d9d9d9;
         }
 
-        .contents {
+        #contents {
             width: 100%;
             display: flex;
         }
 
-        .content1 {
-            width: 33.333%;
-            height: 200px;
-            background-color: #dbdbdb;
-        }
-
-        .content2 {
-            width: 33.3333%;
-            height: 200px;
-            background-color: #dcdcdc;
-        }
-
-        .content3 {
+        #contents .content1 {
             width: 33.3333%;
             height: 200px;
             background-color: #d1d1d1;
+        }
+
+        #contents .content2 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #c7c7c7;
+        }
+
+        #contents .content3 {
+            width: 33.3333%;
+            height: 200px;
+            background-color: #bcbcbc;
         }
 
         #footer {
@@ -85,22 +79,22 @@
             display: flex;
         }
 
-        .footer1 {
+        #footer .footer1 {
             width: 20%;
             height: 100px;
-            background-color: #c1c1c1;
+            background-color: #b1b1b1;
         }
 
-        .footer2 {
+        #footer .footer2 {
             width: 60%;
             height: 100px;
-            background-color: #c9c9c9;
+            background-color: #a3a3a3;
         }
 
-        .footer3 {
+        #footer .footer3 {
             width: 20%;
             height: 100px;
-            background-color: #c7c7c7;
+            background-color: #9d9d9d;
         }
 
         /* nav */
@@ -117,9 +111,9 @@
         }
 
         .nav>ul>li>a {
-            display: inline-block;
             padding: 10px 50px;
-            background-color: #b0b0b0;
+            background-color: #c7c7c7;
+
         }
 
         .nav>ul>li>a:hover {
@@ -129,33 +123,28 @@
         .nav>ul>li>ul {
             position: absolute;
             left: 0;
-            top: 38;
-            background-color: #C7C7C7;
-            /* W: 100P; */
-            /* text-align: center; */
+            top: 45px;
+            text-align: center;
+            padding: 10px;
         }
 
         .nav>ul>li>ul>li {
             /* display: none; */
         }
 
-        .nav>ul>li>ul>li>a {
-            display: inline-block;
+        .nav>ul>li>ul>li>a {}
 
-
-
-
+        .nav>ul>li>ul>li>a:hover {
+            background-color: #696969;
         }
-
-        .nav>ul>li>ul>li>a:hover {}
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <header id="header">
-            <h1 class="logo"></h1>
-            <nav class="nav">
+        <div id="header">
+            <div class="logo"></div>
+            <div class="nav">
                 <ul>
                     <li><a href="#">menu1</a>
                         <ul class="submenu">
@@ -190,25 +179,26 @@
                         </ul>
                     </li>
                 </ul>
-            </nav>
-        </header>
+            </div>
+        </div>
         <!-- //header -->
 
-        <main id="main">
-            <article class="slider"></article>
-            <section class="contents">
-                <div class="content1"></div>
-                <div class="content2"></div>
-                <div class="content3"></div>
-            </section>
-        </main>
-        <!-- //main -->
+        <div id="slider">
+        </div>
+        <!-- //slider -->
 
-        <footer id="footer">
+        <div id="contents">
+            <div class="content1"></div>
+            <div class="content2"></div>
+            <div class="content3"></div>
+        </div>
+        <!-- //contents -->
+
+        <div id="footer">
             <div class="footer1"></div>
             <div class="footer2"></div>
             <div class="footer3"></div>
-        </footer>
+        </div>
         <!-- //footer -->
     </div>
     <!-- //wrap -->
